--- a/_posts/2017-12-06-1-coc.md
+++ b/_posts/2017-12-06-1-coc.md
@@ -16,12 +16,13 @@ As of now I have quite liked this base. Though taken from another blog article, 
 <center>
 <img src="/images/coc.png" alt="th9 coc base" itemprop="image" class="img-responsive"/> 
 </center> 
-<br>
-<!-- more -->
+
+<!-- more -->  
+
+<br/>
+<hr style="border:1px solid gray" />
 
 
-
----
 ## Original Post
 
 In one of the wars I observed this base present in the enemy war clan, which was not 3 starred to the last after 5-6 attempts from various ranked players. I copied it but modified it in various places and ofcourse I had to make the traps postitioning myself. I may edit this post in future in case I notice any weak spots in it but for now it works awesome!
@@ -32,7 +33,7 @@ Here is the image of the base:
 <center>
 <img src="/images/base.jpg" alt="th9 coc base" itemprop="image" class="img-responsive"/> 
 </center>  
-<br> 
+
 About the skeleton troops they are air focussed and the xbows they are also air oriented (anti lavaloon).
 The best cc troop combination for war is: 1 witch, 1 baby dragon, 1 wiz and 4 archers.
 
